feat: improve product content editor
